y.output
Grammar

    0 $accept: progr $end

    1 progr: declaratii bloc

    2 declaratii: declaratie ';'
    3           | declaratii declaratie ';'

    4 declaratie: statements
    5           | decl_clase
    6           | decl_functii

    7 decl_clase: CLASS ID '{' continut_clasa '}'

    8 continut_clasa: PRV ':' declaratii
    9               | PUB ':' declaratii
   10               | PRV ':' declaratii PUB ':' declaratii

   11 apelare_functii: ID '(' parametrii_call ')'
   12                | ID '(' ')'

   13 creare_obiect: ID ID ASSIGN NEW ID '[' NR ']'
   14              | ID ID ASSIGN NEW ID '[' ']'
   15              | ID ID ASSIGN NEW ID

   16 parametrii_call: param_call ',' parametrii_call
   17                | param_call

   18 param_call: expresie
   19           | expresie_string

   20 tip: INT
   21    | FLOAT
   22    | BOOL
   23    | STRING
   24    | CHAR

   25 decl_variabile: tip ID
   26               | tip ID ASSIGN expresie
   27               | tip ID ASSIGN expresie_string
   28               | tip ID '[' NR ']'

   29 decl_const: CONST tip ID ASSIGN NR
   30           | CONST tip ID ASSIGN STRING

   31 decl_if: IF '(' expr_bool ')' '{' list '}'

   32 decl_while: WHILE '(' expr_bool ')' '{' list '}'

   33 decl_for: FOR '(' ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'

   34 semne: GT
   35      | LT
   36      | EQ
   37      | LET
   38      | GET

   39 expr_bool: '(' expr_bool ')'
   40          | expr_bool AND expr_bool
   41          | expr_bool OR expr_bool
   42          | expresie semne expresie

   43 decl_functii: tip ID '(' parametrii ')' '{' list '}'
   44             | tip ID '(' ')' '{' list '}'

   45 parametrii: param ',' parametrii
   46           | param

   47 param: tip ID
   48      | tip ID '[' ']'

   49 expresie: expresie '+' expresie
   50         | expresie '-' expresie
   51         | expresie '*' expresie
   52         | expresie '/' expresie
   53         | expresie '%' expresie
   54         | '(' expresie ')'
   55         | VAL
   56         | ID
   57         | ID '[' NR ']'
   58         | LENGTH '(' ID ')'
   59         | apelare_functii

   60 VAL: NR
   61    | NRFLOAT
   62    | CHARS

   63 expresie_string: expresie_string '+' expresie_string
   64                | '(' expresie_string ')'
   65                | STRINGS
   66                | TOUPPER '(' ID ')'
   67                | TOLOWER '(' ID ')'

   68 list: statements ';'
   69     | list statements ';'

   70 statements: decl_variabile
   71           | apelare_functii
   72           | creare_obiect
   73           | ID ASSIGN expresie
   74           | ID ASSIGN expresie_string
   75           | decl_const
   76           | decl_for
   77           | decl_if
   78           | decl_while
   79           | calculate

   80 bloc: BGIN list END

   81 calculate: EVAL '(' eval_exp ')'

   82 eval_exp: eval_exp '+' eval_exp
   83         | eval_exp '-' eval_exp
   84         | eval_exp '*' eval_exp
   85         | eval_exp '/' eval_exp
   86         | eval_exp '%' eval_exp
   87         | '(' eval_exp ')'
   88         | '-' eval_exp
   89         | NR
   90         | ID
   91         | ID '[' NR ']'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 53 86
    '(' (40) 11 12 31 32 33 39 43 44 54 58 64 66 67 81 87
    ')' (41) 11 12 31 32 33 39 43 44 54 58 64 66 67 81 87
    '*' (42) 51 84
    '+' (43) 49 63 82
    ',' (44) 16 45
    '-' (45) 50 83 88
    '/' (47) 52 85
    ':' (58) 8 9 10
    ';' (59) 2 3 33 68 69
    '[' (91) 13 14 28 48 57 91
    ']' (93) 13 14 28 48 57 91
    '{' (123) 7 31 32 33 43 44
    '}' (125) 7 31 32 33 43 44
    error (256)
    NR <intval> (258) 13 28 29 57 60 89 91
    NRFLOAT <floatval> (259) 61
    ID <strval> (260) 7 11 12 13 14 15 25 26 27 28 29 30 33 43 44 47 48 56 57 58 66 67 73 74 90 91
    STRINGS <strval> (261) 65
    CHARS <strval> (262) 62
    INT <type> (263) 20
    FLOAT <type> (264) 21
    BOOL <type> (265) 22
    STRING <type> (266) 23 30
    CHAR <type> (267) 24
    EVAL (268) 81
    ASSIGN (269) 13 14 15 26 27 29 30 33 73 74
    TOUPPER (270) 66
    TOLOWER (271) 67
    LENGTH (272) 58
    BGIN (273) 80
    END (274) 80
    PRV (275) 8 10
    PUB (276) 9 10
    NEW (277) 13 14 15
    CLASS (278) 7
    IF (279) 31
    WHILE (280) 32
    FOR (281) 33
    CONST <const_flag> (282) 29 30
    GT (283) 34
    LT (284) 35
    EQ (285) 36
    LET (286) 37
    GET (287) 38
    AND (288) 40
    OR (289) 41


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    progr (50)
        on left: 1
        on right: 0
    declaratii (51)
        on left: 2 3
        on right: 1 3 8 9 10
    declaratie (52)
        on left: 4 5 6
        on right: 2 3
    decl_clase (53)
        on left: 7
        on right: 5
    continut_clasa (54)
        on left: 8 9 10
        on right: 7
    apelare_functii (55)
        on left: 11 12
        on right: 59 71
    creare_obiect (56)
        on left: 13 14 15
        on right: 72
    parametrii_call (57)
        on left: 16 17
        on right: 11 16
    param_call (58)
        on left: 18 19
        on right: 16 17
    tip (59)
        on left: 20 21 22 23 24
        on right: 25 26 27 28 29 30 43 44 47 48
    decl_variabile (60)
        on left: 25 26 27 28
        on right: 70
    decl_const (61)
        on left: 29 30
        on right: 75
    decl_if (62)
        on left: 31
        on right: 77
    decl_while (63)
        on left: 32
        on right: 78
    decl_for (64)
        on left: 33
        on right: 76
    semne (65)
        on left: 34 35 36 37 38
        on right: 42
    expr_bool (66)
        on left: 39 40 41 42
        on right: 31 32 33 39 40 41
    decl_functii (67)
        on left: 43 44
        on right: 6
    parametrii (68)
        on left: 45 46
        on right: 43 45
    param (69)
        on left: 47 48
        on right: 45 46
    expresie (70)
        on left: 49 50 51 52 53 54 55 56 57 58 59
        on right: 18 26 33 42 49 50 51 52 53 54 73
    VAL (71)
        on left: 60 61 62
        on right: 55
    expresie_string (72)
        on left: 63 64 65 66 67
        on right: 19 27 63 64 74
    list (73)
        on left: 68 69
        on right: 31 32 33 43 44 69 80
    statements (74)
        on left: 70 71 72 73 74 75 76 77 78 79
        on right: 4 68 69
    bloc (75)
        on left: 80
        on right: 1
    calculate <intval> (76)
        on left: 81
        on right: 79
    eval_exp <intval> (77)
        on left: 82 83 84 85 86 87 88 89 90 91
        on right: 81 82 83 84 85 86 87 88


State 0

    0 $accept: . progr $end
    1 progr: . declaratii bloc
    2 declaratii: . declaratie ';'
    3           | . declaratii declaratie ';'
    4 declaratie: . statements
    5           | . decl_clase
    6           | . decl_functii
    7 decl_clase: . CLASS ID '{' continut_clasa '}'
   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   13 creare_obiect: . ID ID ASSIGN NEW ID '[' NR ']'
   14              | . ID ID ASSIGN NEW ID '[' ']'
   15              | . ID ID ASSIGN NEW ID
   20 tip: . INT
   21    | . FLOAT
   22    | . BOOL
   23    | . STRING
   24    | . CHAR
   25 decl_variabile: . tip ID
   26               | . tip ID ASSIGN expresie
   27               | . tip ID ASSIGN expresie_string
   28               | . tip ID '[' NR ']'
   29 decl_const: . CONST tip ID ASSIGN NR
   30           | . CONST tip ID ASSIGN STRING
   31 decl_if: . IF '(' expr_bool ')' '{' list '}'
   32 decl_while: . WHILE '(' expr_bool ')' '{' list '}'
   33 decl_for: . FOR '(' ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'
   43 decl_functii: . tip ID '(' parametrii ')' '{' list '}'
   44             | . tip ID '(' ')' '{' list '}'
   70 statements: . decl_variabile
   71           | . apelare_functii
   72           | . creare_obiect
   73           | . ID ASSIGN expresie
   74           | . ID ASSIGN expresie_string
   75           | . decl_const
   76           | . decl_for
   77           | . decl_if
   78           | . decl_while
   79           | . calculate
   81 calculate: . EVAL '(' eval_exp ')'

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    CHAR    shift, and go to state 6
    EVAL    shift, and go to state 7
    CLASS   shift, and go to state 8
    IF      shift, and go to state 9
    WHILE   shift, and go to state 10
    FOR     shift, and go to state 11
    CONST   shift, and go to state 12

    progr            go to state 13
    declaratii       go to state 14
    declaratie       go to state 15
    decl_clase       go to state 16
    apelare_functii  go to state 17
    creare_obiect    go to state 18
    tip              go to state 19
    decl_variabile   go to state 20
    decl_const       go to state 21
    decl_if          go to state 22
    decl_while       go to state 23
    decl_for         go to state 24
    decl_functii     go to state 25
    statements       go to state 26
    calculate        go to state 27


State 1

   11 apelare_functii: ID . '(' parametrii_call ')'
   12                | ID . '(' ')'
   13 creare_obiect: ID . ID ASSIGN NEW ID '[' NR ']'
   14              | ID . ID ASSIGN NEW ID '[' ']'
   15              | ID . ID ASSIGN NEW ID
   73 statements: ID . ASSIGN expresie
   74           | ID . ASSIGN expresie_string

    ID      shift, and go to state 28
    ASSIGN  shift, and go to state 29
    '('     shift, and go to state 30


State 2

   20 tip: INT .

    $default  reduce using rule 20 (tip)


State 3

   21 tip: FLOAT .

    $default  reduce using rule 21 (tip)


State 4

   22 tip: BOOL .

    $default  reduce using rule 22 (tip)


State 5

   23 tip: STRING .

    $default  reduce using rule 23 (tip)


State 6

   24 tip: CHAR .

    $default  reduce using rule 24 (tip)


State 7

   81 calculate: EVAL . '(' eval_exp ')'

    '('  shift, and go to state 31


State 8

    7 decl_clase: CLASS . ID '{' continut_clasa '}'

    ID  shift, and go to state 32


State 9

   31 decl_if: IF . '(' expr_bool ')' '{' list '}'

    '('  shift, and go to state 33


State 10

   32 decl_while: WHILE . '(' expr_bool ')' '{' list '}'

    '('  shift, and go to state 34


State 11

   33 decl_for: FOR . '(' ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'

    '('  shift, and go to state 35


State 12

   20 tip: . INT
   21    | . FLOAT
   22    | . BOOL
   23    | . STRING
   24    | . CHAR
   29 decl_const: CONST . tip ID ASSIGN NR
   30           | CONST . tip ID ASSIGN STRING

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    CHAR    shift, and go to state 6

    tip  go to state 36


State 13

    0 $accept: progr . $end

    $end  shift, and go to state 37


State 14

    1 progr: declaratii . bloc
    3 declaratii: declaratii . declaratie ';'
    4 declaratie: . statements
    5           | . decl_clase
    6           | . decl_functii
    7 decl_clase: . CLASS ID '{' continut_clasa '}'
   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   13 creare_obiect: . ID ID ASSIGN NEW ID '[' NR ']'
   14              | . ID ID ASSIGN NEW ID '[' ']'
   15              | . ID ID ASSIGN NEW ID
   20 tip: . INT
   21    | . FLOAT
   22    | . BOOL
   23    | . STRING
   24    | . CHAR
   25 decl_variabile: . tip ID
   26               | . tip ID ASSIGN expresie
   27               | . tip ID ASSIGN expresie_string
   28               | . tip ID '[' NR ']'
   29 decl_const: . CONST tip ID ASSIGN NR
   30           | . CONST tip ID ASSIGN STRING
   31 decl_if: . IF '(' expr_bool ')' '{' list '}'
   32 decl_while: . WHILE '(' expr_bool ')' '{' list '}'
   33 decl_for: . FOR '(' ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'
   43 decl_functii: . tip ID '(' parametrii ')' '{' list '}'
   44             | . tip ID '(' ')' '{' list '}'
   70 statements: . decl_variabile
   71           | . apelare_functii
   72           | . creare_obiect
   73           | . ID ASSIGN expresie
   74           | . ID ASSIGN expresie_string
   75           | . decl_const
   76           | . decl_for
   77           | . decl_if
   78           | . decl_while
   79           | . calculate
   80 bloc: . BGIN list END
   81 calculate: . EVAL '(' eval_exp ')'

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    CHAR    shift, and go to state 6
    EVAL    shift, and go to state 7
    BGIN    shift, and go to state 38
    CLASS   shift, and go to state 8
    IF      shift, and go to state 9
    WHILE   shift, and go to state 10
    FOR     shift, and go to state 11
    CONST   shift, and go to state 12

    declaratie       go to state 39
    decl_clase       go to state 16
    apelare_functii  go to state 17
    creare_obiect    go to state 18
    tip              go to state 19
    decl_variabile   go to state 20
    decl_const       go to state 21
    decl_if          go to state 22
    decl_while       go to state 23
    decl_for         go to state 24
    decl_functii     go to state 25
    statements       go to state 26
    bloc             go to state 40
    calculate        go to state 27


State 15

    2 declaratii: declaratie . ';'

    ';'  shift, and go to state 41


State 16

    5 declaratie: decl_clase .

    $default  reduce using rule 5 (declaratie)


State 17

   71 statements: apelare_functii .

    $default  reduce using rule 71 (statements)


State 18

   72 statements: creare_obiect .

    $default  reduce using rule 72 (statements)


State 19

   25 decl_variabile: tip . ID
   26               | tip . ID ASSIGN expresie
   27               | tip . ID ASSIGN expresie_string
   28               | tip . ID '[' NR ']'
   43 decl_functii: tip . ID '(' parametrii ')' '{' list '}'
   44             | tip . ID '(' ')' '{' list '}'

    ID  shift, and go to state 42


State 20

   70 statements: decl_variabile .

    $default  reduce using rule 70 (statements)


State 21

   75 statements: decl_const .

    $default  reduce using rule 75 (statements)


State 22

   77 statements: decl_if .

    $default  reduce using rule 77 (statements)


State 23

   78 statements: decl_while .

    $default  reduce using rule 78 (statements)


State 24

   76 statements: decl_for .

    $default  reduce using rule 76 (statements)


State 25

    6 declaratie: decl_functii .

    $default  reduce using rule 6 (declaratie)


State 26

    4 declaratie: statements .

    $default  reduce using rule 4 (declaratie)


State 27

   79 statements: calculate .

    $default  reduce using rule 79 (statements)


State 28

   13 creare_obiect: ID ID . ASSIGN NEW ID '[' NR ']'
   14              | ID ID . ASSIGN NEW ID '[' ']'
   15              | ID ID . ASSIGN NEW ID

    ASSIGN  shift, and go to state 43


State 29

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS
   63 expresie_string: . expresie_string '+' expresie_string
   64                | . '(' expresie_string ')'
   65                | . STRINGS
   66                | . TOUPPER '(' ID ')'
   67                | . TOLOWER '(' ID ')'
   73 statements: ID ASSIGN . expresie
   74           | ID ASSIGN . expresie_string

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    STRINGS  shift, and go to state 47
    CHARS    shift, and go to state 48
    TOUPPER  shift, and go to state 49
    TOLOWER  shift, and go to state 50
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 52

    apelare_functii  go to state 53
    expresie         go to state 54
    VAL              go to state 55
    expresie_string  go to state 56


State 30

   11 apelare_functii: . ID '(' parametrii_call ')'
   11                | ID '(' . parametrii_call ')'
   12                | . ID '(' ')'
   12                | ID '(' . ')'
   16 parametrii_call: . param_call ',' parametrii_call
   17                | . param_call
   18 param_call: . expresie
   19           | . expresie_string
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS
   63 expresie_string: . expresie_string '+' expresie_string
   64                | . '(' expresie_string ')'
   65                | . STRINGS
   66                | . TOUPPER '(' ID ')'
   67                | . TOLOWER '(' ID ')'

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    STRINGS  shift, and go to state 47
    CHARS    shift, and go to state 48
    TOUPPER  shift, and go to state 49
    TOLOWER  shift, and go to state 50
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 52
    ')'      shift, and go to state 57

    apelare_functii  go to state 53
    parametrii_call  go to state 58
    param_call       go to state 59
    expresie         go to state 60
    VAL              go to state 55
    expresie_string  go to state 61


State 31

   81 calculate: EVAL '(' . eval_exp ')'
   82 eval_exp: . eval_exp '+' eval_exp
   83         | . eval_exp '-' eval_exp
   84         | . eval_exp '*' eval_exp
   85         | . eval_exp '/' eval_exp
   86         | . eval_exp '%' eval_exp
   87         | . '(' eval_exp ')'
   88         | . '-' eval_exp
   89         | . NR
   90         | . ID
   91         | . ID '[' NR ']'

    NR   shift, and go to state 62
    ID   shift, and go to state 63
    '-'  shift, and go to state 64
    '('  shift, and go to state 65

    eval_exp  go to state 66


State 32

    7 decl_clase: CLASS ID . '{' continut_clasa '}'

    '{'  shift, and go to state 67


State 33

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   31 decl_if: IF '(' . expr_bool ')' '{' list '}'
   39 expr_bool: . '(' expr_bool ')'
   40          | . expr_bool AND expr_bool
   41          | . expr_bool OR expr_bool
   42          | . expresie semne expresie
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    CHARS    shift, and go to state 48
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 68

    apelare_functii  go to state 53
    expr_bool        go to state 69
    expresie         go to state 70
    VAL              go to state 55


State 34

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   32 decl_while: WHILE '(' . expr_bool ')' '{' list '}'
   39 expr_bool: . '(' expr_bool ')'
   40          | . expr_bool AND expr_bool
   41          | . expr_bool OR expr_bool
   42          | . expresie semne expresie
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    CHARS    shift, and go to state 48
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 68

    apelare_functii  go to state 53
    expr_bool        go to state 71
    expresie         go to state 70
    VAL              go to state 55


State 35

   33 decl_for: FOR '(' . ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'

    ID  shift, and go to state 72


State 36

   29 decl_const: CONST tip . ID ASSIGN NR
   30           | CONST tip . ID ASSIGN STRING

    ID  shift, and go to state 73


State 37

    0 $accept: progr $end .

    $default  accept


State 38

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   13 creare_obiect: . ID ID ASSIGN NEW ID '[' NR ']'
   14              | . ID ID ASSIGN NEW ID '[' ']'
   15              | . ID ID ASSIGN NEW ID
   20 tip: . INT
   21    | . FLOAT
   22    | . BOOL
   23    | . STRING
   24    | . CHAR
   25 decl_variabile: . tip ID
   26               | . tip ID ASSIGN expresie
   27               | . tip ID ASSIGN expresie_string
   28               | . tip ID '[' NR ']'
   29 decl_const: . CONST tip ID ASSIGN NR
   30           | . CONST tip ID ASSIGN STRING
   31 decl_if: . IF '(' expr_bool ')' '{' list '}'
   32 decl_while: . WHILE '(' expr_bool ')' '{' list '}'
   33 decl_for: . FOR '(' ID ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'
   68 list: . statements ';'
   69     | . list statements ';'
   70 statements: . decl_variabile
   71           | . apelare_functii
   72           | . creare_obiect
   73           | . ID ASSIGN expresie
   74           | . ID ASSIGN expresie_string
   75           | . decl_const
   76           | . decl_for
   77           | . decl_if
   78           | . decl_while
   79           | . calculate
   80 bloc: BGIN . list END
   81 calculate: . EVAL '(' eval_exp ')'

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    CHAR    shift, and go to state 6
    EVAL    shift, and go to state 7
    IF      shift, and go to state 9
    WHILE   shift, and go to state 10
    FOR     shift, and go to state 11
    CONST   shift, and go to state 12

    apelare_functii  go to state 17
    creare_obiect    go to state 18
    tip              go to state 74
    decl_variabile   go to state 20
    decl_const       go to state 21
    decl_if          go to state 22
    decl_while       go to state 23
    decl_for         go to state 24
    list             go to state 75
    statements       go to state 76
    calculate        go to state 27


State 39

    3 declaratii: declaratii declaratie . ';'

    ';'  shift, and go to state 77


State 40

    1 progr: declaratii bloc .

    $default  reduce using rule 1 (progr)


State 41

    2 declaratii: declaratie ';' .

    $default  reduce using rule 2 (declaratii)


State 42

   25 decl_variabile: tip ID .  [';']
   26               | tip ID . ASSIGN expresie
   27               | tip ID . ASSIGN expresie_string
   28               | tip ID . '[' NR ']'
   43 decl_functii: tip ID . '(' parametrii ')' '{' list '}'
   44             | tip ID . '(' ')' '{' list '}'

    ASSIGN  shift, and go to state 78
    '('     shift, and go to state 79
    '['     shift, and go to state 80

    $default  reduce using rule 25 (decl_variabile)


State 43

   13 creare_obiect: ID ID ASSIGN . NEW ID '[' NR ']'
   14              | ID ID ASSIGN . NEW ID '[' ']'
   15              | ID ID ASSIGN . NEW ID

    NEW  shift, and go to state 81


State 44

   60 VAL: NR .

    $default  reduce using rule 60 (VAL)


State 45

   61 VAL: NRFLOAT .

    $default  reduce using rule 61 (VAL)


State 46

   11 apelare_functii: ID . '(' parametrii_call ')'
   12                | ID . '(' ')'
   56 expresie: ID .  [GT, LT, EQ, LET, GET, AND, OR, '+', '-', '*', '/', '%', ';', ')', ',']
   57         | ID . '[' NR ']'

    '('  shift, and go to state 30
    '['  shift, and go to state 82

    $default  reduce using rule 56 (expresie)


State 47

   65 expresie_string: STRINGS .

    $default  reduce using rule 65 (expresie_string)


State 48

   62 VAL: CHARS .

    $default  reduce using rule 62 (VAL)


State 49

   66 expresie_string: TOUPPER . '(' ID ')'

    '('  shift, and go to state 83


State 50

   67 expresie_string: TOLOWER . '(' ID ')'

    '('  shift, and go to state 84


State 51

   58 expresie: LENGTH . '(' ID ')'

    '('  shift, and go to state 85


State 52

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   54         | '(' . expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS
   63 expresie_string: . expresie_string '+' expresie_string
   64                | . '(' expresie_string ')'
   64                | '(' . expresie_string ')'
   65                | . STRINGS
   66                | . TOUPPER '(' ID ')'
   67                | . TOLOWER '(' ID ')'

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    STRINGS  shift, and go to state 47
    CHARS    shift, and go to state 48
    TOUPPER  shift, and go to state 49
    TOLOWER  shift, and go to state 50
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 52

    apelare_functii  go to state 53
    expresie         go to state 86
    VAL              go to state 55
    expresie_string  go to state 87


State 53

   59 expresie: apelare_functii .

    $default  reduce using rule 59 (expresie)


State 54

   49 expresie: expresie . '+' expresie
   50         | expresie . '-' expresie
   51         | expresie . '*' expresie
   52         | expresie . '/' expresie
   53         | expresie . '%' expresie
   73 statements: ID ASSIGN expresie .  [';']

    '+'  shift, and go to state 88
    '-'  shift, and go to state 89
    '*'  shift, and go to state 90
    '/'  shift, and go to state 91
    '%'  shift, and go to state 92

    $default  reduce using rule 73 (statements)


State 55

   55 expresie: VAL .

    $default  reduce using rule 55 (expresie)


State 56

   63 expresie_string: expresie_string . '+' expresie_string
   74 statements: ID ASSIGN expresie_string .  [';']

    '+'  shift, and go to state 93

    $default  reduce using rule 74 (statements)


State 57

   12 apelare_functii: ID '(' ')' .

    $default  reduce using rule 12 (apelare_functii)


State 58

   11 apelare_functii: ID '(' parametrii_call . ')'

    ')'  shift, and go to state 94


State 59

   16 parametrii_call: param_call . ',' parametrii_call
   17                | param_call .  [')']

    ','  shift, and go to state 95

    $default  reduce using rule 17 (parametrii_call)


State 60

   18 param_call: expresie .  [')', ',']
   49 expresie: expresie . '+' expresie
   50         | expresie . '-' expresie
   51         | expresie . '*' expresie
   52         | expresie . '/' expresie
   53         | expresie . '%' expresie

    '+'  shift, and go to state 88
    '-'  shift, and go to state 89
    '*'  shift, and go to state 90
    '/'  shift, and go to state 91
    '%'  shift, and go to state 92

    $default  reduce using rule 18 (param_call)


State 61

   19 param_call: expresie_string .  [')', ',']
   63 expresie_string: expresie_string . '+' expresie_string

    '+'  shift, and go to state 93

    $default  reduce using rule 19 (param_call)


State 62

   89 eval_exp: NR .

    $default  reduce using rule 89 (eval_exp)


State 63

   90 eval_exp: ID .  ['+', '-', '*', '/', '%', ')']
   91         | ID . '[' NR ']'

    '['  shift, and go to state 96

    $default  reduce using rule 90 (eval_exp)


State 64

   82 eval_exp: . eval_exp '+' eval_exp
   83         | . eval_exp '-' eval_exp
   84         | . eval_exp '*' eval_exp
   85         | . eval_exp '/' eval_exp
   86         | . eval_exp '%' eval_exp
   87         | . '(' eval_exp ')'
   88         | . '-' eval_exp
   88         | '-' . eval_exp
   89         | . NR
   90         | . ID
   91         | . ID '[' NR ']'

    NR   shift, and go to state 62
    ID   shift, and go to state 63
    '-'  shift, and go to state 64
    '('  shift, and go to state 65

    eval_exp  go to state 97


State 65

   82 eval_exp: . eval_exp '+' eval_exp
   83         | . eval_exp '-' eval_exp
   84         | . eval_exp '*' eval_exp
   85         | . eval_exp '/' eval_exp
   86         | . eval_exp '%' eval_exp
   87         | . '(' eval_exp ')'
   87         | '(' . eval_exp ')'
   88         | . '-' eval_exp
   89         | . NR
   90         | . ID
   91         | . ID '[' NR ']'

    NR   shift, and go to state 62
    ID   shift, and go to state 63
    '-'  shift, and go to state 64
    '('  shift, and go to state 65

    eval_exp  go to state 98


State 66

   81 calculate: EVAL '(' eval_exp . ')'
   82 eval_exp: eval_exp . '+' eval_exp
   83         | eval_exp . '-' eval_exp
   84         | eval_exp . '*' eval_exp
   85         | eval_exp . '/' eval_exp
   86         | eval_exp . '%' eval_exp

    '+'  shift, and go to state 99
    '-'  shift, and go to state 100
    '*'  shift, and go to state 101
    '/'  shift, and go to state 102
    '%'  shift, and go to state 103
    ')'  shift, and go to state 104


State 67

    7 decl_clase: CLASS ID '{' . continut_clasa '}'
    8 continut_clasa: . PRV ':' declaratii
    9               | . PUB ':' declaratii
   10               | . PRV ':' declaratii PUB ':' declaratii

    PRV  shift, and go to state 105
    PUB  shift, and go to state 106

    continut_clasa  go to state 107


State 68

   11 apelare_functii: . ID '(' parametrii_call ')'
   12                | . ID '(' ')'
   39 expr_bool: . '(' expr_bool ')'
   39          | '(' . expr_bool ')'
   40          | . expr_bool AND expr_bool
   41          | . expr_bool OR expr_bool
   42          | . expresie semne expresie
   49 expresie: . expresie '+' expresie
   50         | . expresie '-' expresie
   51         | . expresie '*' expresie
   52         | . expresie '/' expresie
   53         | . expresie '%' expresie
   54         | . '(' expresie ')'
   54         | '(' . expresie ')'
   55         | . VAL
   56         | . ID
   57         | . ID '[' NR ']'
   58         | . LENGTH '(' ID ')'
   59         | . apelare_functii
   60 VAL: . NR
   61    | . NRFLOAT
   62    | . CHARS

    NR       shift, and go to state 44
    NRFLOAT  shift, and go to state 45
    ID       shift, and go to state 46
    CHARS    shift, and go to state 48
    LENGTH   shift, and go to state 51
    '('      shift, and go to state 68

    apelare_functii  go to state 53
    expr_bool        go to state 108
    expresie         go to state 109
    VAL              go to state 55


State 69

   31 decl_if: IF '(' expr_bool . ')' '{' list '}'
   40 expr_bool: expr_bool . AND expr_bool
   41          | expr_bool . OR expr_bool

    AND  shift, and go to state 110
    OR   shift, and go to state 111
    ')'  shift, and go to state 112


State 70

   34 semne: . GT
   35      | . LT
   36      | . EQ
   37      | . LET
   38      | . GET
   42 expr_bool: expresie . semne expresie
   49 expresie: expresie . '+' expresie
   50         | expresie . '-' expresie
   51         | expresie . '*' expresie
   52         | expresie . '/' expresie
   53         | expresie . '%' expresie

    GT   shift, and go to state 113
    LT   shift, and go to state 114
    EQ   shift, and go to state 115
    LET  shift, and go to state 116
    GET  shift, and go to state 117
    '+'  shift, and go to state 88
    '-'  shift, and go to state 89
    '*'  shift, and go to state 90
    '/'  shift, and go to state 91
    '%'  shift, and go to state 92

    semne  go to state 118


State 71

   32 decl_while: WHILE '(' expr_bool . ')' '{' list '}'
   40 expr_bool: expr_bool . AND expr_bool
   41          | expr_bool . OR expr_bool

    AND  shift, and go to state 110
    OR   shift, and go to state 111
    ')'  shift, and go to state 119


State 72

   33 decl_for: FOR '(' ID . ASSIGN ID ';' expr_bool ';' expresie ')' '{' list '}'

    ASSIGN  shift, and go to state 120


State 73

   29 decl_const: CONST tip ID . ASSIGN NR
   30           | CONST tip ID . ASSIGN STRING

    ASSIGN  shift, and go to state 121


State 74

   25 decl_variabile: tip . ID
   26               | tip . ID ASSIGN expresie
   27               | tip . ID ASSIGN expresie_string
   28               | tip . ID '[' NR ']'

    ID  shift, and go to state 122


State 75
